Show representation of object without name

--- a/docs/css/style.css
+++ b/docs/css/style.css
@@ -1,6 +1,23 @@
 body {
   font-family: sans-serif;
-  color: #e2c922;
+  color: #eedb4f;
+}
+
+.debugger {
+  background: whitesmoke;
+  border: 1px solid #dedede;
+  border-left: 3px solid #f36e35;
+  color: #666666;
+  page-break-inside: avoid;
+  font-family: monospace;
+  font-size: 15px;
+  line-height: 1.6;
+  margin-bottom: 1.6em;
+  max-width: 100%;
+  overflow: auto;
+  padding: 1em 1.5em;
+  display: block;
+  word-wrap: break-word;
 }
 
 /*# sourceMappingURL=style.css.map */
