--- a/src/_includes/about.njk
+++ b/src/_includes/about.njk
@@ -6,9 +6,10 @@
           content='width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0'>
     <meta http-equiv='X-UA-Compatible' content='ie=edge'>
     <title>{{ title }}</title>
-    <link rel='stylesheet' href='{{ 'css/style.css' | url }}'>
+    <link rel='stylesheet' href='{{ '../css/style.css' | url }}'>
 </head>
 <body>
+<a href='{{ '/' | url }}'>Object Ipsum</a>
 <h1>{{ title }}</h1>
 {{ content | safe }}
 </body>
