Add value type checking

--- a/src/_includes/base.njk
+++ b/src/_includes/base.njk
@@ -17,7 +17,8 @@
         <div class='fruits'>{{ fruit }}</div>
     {%- endfor -%}
 
-    {{ object-functions.eleventyComputed.templateString }}
+
+    {{ objectFunctions.eleventyComputed.templateString }}
 </div>
 </body>
 </html>
