--- a/docs/css/style.css
+++ b/docs/css/style.css
@@ -1,28 +1,104 @@
-body {
+@import url("https://fonts.googleapis.com/css2?family=Space+Mono:ital,wght@0,400;0,700;1,700&display=swap");
+html {
+  background-color: #1d1c21;
+  color: #cfcdd5;
   font-family: sans-serif;
-  color: #e2c922;
 }
 
-.debugger {
-  background: whitesmoke;
-  border: 1px solid #dedede;
-  border-left: 3px solid #f36e35;
-  color: #666;
-  page-break-inside: avoid;
-  font-family: monospace;
+body {
+  margin: 0;
+}
+
+.heading {
+  font-size: 18px;
+  color: #050506;
+  padding: 20px;
+  text-align: left;
+  background: #eae9ec linear-gradient(47deg, #eae9ec calc(100% - 300px), #fff calc(100% - 300px), #fff calc(100% - 296px), #ffeb8a calc(100% - 296px));
+}
+@media (min-width: 800px) {
+  .heading {
+    padding-bottom: 14vmin;
+  }
+}
+
+.heading-title {
+  margin-top: 38px;
+  font-family: "Space Mono", monospace;
+  font-weight: 500;
+  font-style: normal;
+  text-decoration: none;
+  letter-spacing: 0.04em;
+  line-height: 1;
+  text-align: left;
+}
+
+.heading-subtitle {
+  color: #615e6e;
+  font-size: 25px;
+  margin: 0 0 110px;
+}
+
+.objects h2 {
+  display: none;
+}
+
+.cards {
+  padding: 0 20px;
+  list-style: none;
+  max-width: 1200px;
+  margin: 20px auto;
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(24ch, 1fr));
+  grid-gap: 20px;
+}
+@media (min-width: 800px) {
+  .cards {
+    margin-top: -9vmin;
+    grid-template-columns: repeat(auto-fit, minmax(28ch, 1fr));
+  }
+}
+
+label {
+  flex-direction: column;
+  display: flex;
+}
+
+.card {
+  font-size: 16px;
+  display: flex;
+  flex-direction: column;
+  background-color: #fff;
+  color: #1d1c21;
+  text-decoration: none;
+  padding: 20px;
+  height: 8em;
+  border-radius: 16px;
+  box-shadow: 0 2px 4px rgba(29, 28, 33, 0.2);
+  resize: vertical;
+  text-align: left;
+  min-height: auto;
+}
+.card:hover {
+  background-color: white;
+}
+.card:focus {
+  box-shadow: 0 0 0 14pt #0d62e0;
+}
+.card:hover, .card:focus {
+  box-shadow: 0 2px 2px rgba(29, 28, 33, 0.5);
+}
+
+.card-title {
+  font-size: 18px;
+  margin: 0;
+}
+
+.card-obj {
+  font-family: "Space Mono", monospace;
+  margin: auto 0 0 0;
   font-size: 15px;
-  line-height: 1.6;
-  margin-bottom: 1.6em;
-  max-width: 100%;
-  overflow: auto;
-  padding: 1em 1.5em;
-  display: block;
-  word-wrap: break-word;
-}
-
-.fruits {
-  font-size: 300%;
-  display: inline;
+  color: gainsboro;
 }
 
 /*# sourceMappingURL=style.css.map */
